# 3d-scan

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 3dgs.md  api.md  architecture.md
scripts/: ci.sh  e2e_3dgs_test.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
src/: __main__.py  config.py  connectors.py  decompose.py  gaussian_model.py  mesh_export.py  postprocess.py  preprocess.py  reconstruct.py  server.py  splatting.py  splatting_kernel.py  texturing.py  utils.py
src/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_decompose.py  test_e2e.py  test_mesh_export.py  test_postprocess.py  test_preprocess.py  test_reconstruct.py  test_server.py  test_splatting.py  test_texturing.py  test_utils.py  test_web.py
