[project]
name = "3d-scan"
version = "0.1.0"
description = "多角度图片 → 高精度 3D 模型重建与模块化拆解"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "open3d>=0.18",
    "pillow>=10.0",
    "rembg>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "celery[redis]>=5.3",
    "trimesh>=4.1",
    "scikit-image>=0.22",
    "httpx>=0.27",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "torchvision>=0.17",
    "xformers>=0.0.24",
    "dust3r @ git+https://github.com/naver/dust3r.git",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/splatting.py" = ["N806", "N812"]              # 3DGS 数学变量名 + PyTorch F 别名
"src/gaussian_model.py" = ["N806"]                 # 旋转/缩放矩阵 R, S
"src/splatting_kernel.py" = ["N803", "N806"]       # 3DGS 论文变量名: means2D/cov2D/T/dLdC/... + 参数命名

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:warnings"

[tool.coverage.run]
source = ["src"]
omit = ["src/web/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]